# yoyo-quant-evolve

./: CLAUDE.md  Cargo.toml  EVOLUTION_SETUP.md  IDENTITY.md  JOURNAL.md  LEARNINGS.md  MEMORY.md  PROJECT_INFO.md  README.md  REFLECTIONS.md  ROADMAP.md  STARTUP_GUIDE.md  TRADES.md  manage-evolve.sh
.github/workflows/: evolve.yml
docs/: index.html  style.css
scripts/: evolve.sh
skills/communicate/: SKILL.md
skills/evolve/: SKILL.md
skills/reflect/: SKILL.md
skills/remember/: SKILL.md
skills/self-assess/: SKILL.md
skills/trade-journal/: SKILL.md
src/: commands.rs  main.rs  proxy_provider.rs
src/tools/: alerts.rs  backtest.rs  crypto.rs  format.rs  http.rs  indicators.rs  market_overview.rs  mod.rs  news.rs  portfolio.rs  price_history.rs  risk.rs  search_symbol.rs  trade_analysis.rs  watchlist.rs
