[package]
name = "yoyo"
version = "0.1.0"
edition = "2021"
description = "A coding agent that evolves itself. Born as 200 lines of Rust, growing up in public."
license = "MIT"
repository = "https://github.com/yologdev/yoyo-evolve"

[dependencies]
yoagent = "0.5"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
